2007-02-04  Jens Granseuer  <jensgr@gmx.net>

	* eggaccelerators.c: (egg_virtual_accelerator_name),
	(egg_virtual_accelerator_label):
	* eggaccelerators.h:
	* eggcellrendererkeys.c: (convert_keysym_state_to_string):
	* gnome-keybinding-properties.c: (binding_name),
	(accel_edited_callback): support localized key names (interim fix
	for #145346)

2007-02-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (accel_edited_callback): filter
	out CapsLock modifiers since it's otherwise possible to set the
	same accel for several actions (fixes #350424)

2007-02-02  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (accel_edited_callback): blacklist
	numbers, space, and tab as accels (fixes #359092)

2007-01-31  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (main): remove left-over call to
	gnome_theme_init(). The rest of the code dealing with (key) themes
	has been removed back in 2004... (fixes #157452)

2007-01-30  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (accel_edited_callback): issue a
	sensible error message when trying to use unmodified keybindings
	(fixes #328152)

2007-01-21  Thomas Wood  <thos@gnome.org>

	* keybinding.desktop.in.in: Corrected category entry

2007-01-10  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #394824

	Patch by Jens Granseuer <jensgr@gmx.net>

	* gnome-keybinding-properties.c (key_entry_controlling_key_changed,
	setup_dialog, main): fixed leaks.

2007-01-08  Rodrigo Moya <rodrigo@novell.com>

	* gnome-keybinding-properties.c (create_dialog, clear_old_model):
	moved gtk_scrolled_window_ call back to its correct place.

2007-01-08  Rodrigo Moya <rodrigo@novell.com>

	Fixes #128158
	
	Patch by Jens Granseuer <jensgr@gmx.net>

	* gnome-keybinding-properties.c (create_dialog): set scrolled window
	policy to _NEVER.
	(clear_old_model): euse the existing model instead of discarding and
	rebuilding it.
	(main): don't leak the GnomeProgram.
	